[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
[metadata]
dependencies = [
    "Click>=7.0",
    "asgiref==3.5.2",
    "blessed==1.19.1",
    "inquirer==2.10.0",
    "pyfiglet==0.8.post1",
    "python-editor==1.0.4",
    "readchar==4.0.2",
    "six==1.16.0",
    "sqlparse==0.4.2",
    "termcolor==1.1.0",
    "wcwidth==0.2.5",
]

[project.optional-dependencies]
dev = [
    "Click>=7.0",
    "asgiref==3.5.2",
    "blessed==1.19.1",
    "inquirer==2.10.0",
    "pyfiglet==0.8.post1",
    "python-editor==1.0.4",
    "readchar==4.0.2",
    "six==1.16.0",
    "sqlparse==0.4.2",
    "termcolor==1.1.0",
    "wcwidth==0.2.5",
]

[project.urls]
homepage = "https://github.com/LeoMbm/django-deploy-cli"
documentation = "https://github.com/LeoMbm/django-deploy-cli"
repository = "https://github.com/LeoMbm/django-deploy-cli"
