[metadata]
name = django-deploy-cli
version = 0.0.1
author = LeoMbm
author_email = leo.j.mbm@gmail.com
description = Generate your Procfile, runtime.txt and requirements.txt from the CLI.
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/LeoMbm/django-deploy-cli
project_urls = https://github.com/LeoMbm/django-deploy-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src